<resources>

    <string name="facebook_app_id">291011115801822</string>
    <string name="fb_login_protocol_scheme">fb291011115801822</string>

    <string name="unlimited_songs_free_on_vachanam_music">Unlimited songs\nFree on Vachanam Music.</string>
    <string name="sign_up_for_more_gt_gt"><![CDATA[Sign up for more >>]]></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login">Login</string>
    <string name="default_theme">Default Theme</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="purple_black">Purple black</string>
    <string name="grey_black">Grey black</string>
    <string name="light_blue_black">Light blue black</string>
    <string name="blue_whale_black">Blue whale black</string>
    <string name="reddish_black">Reddish black</string>
    <string name="black">Black</string>
    <string name="todo">TODO</string>
    <string name="series_of_melodies">Series of melodies</string>
    <string name="type_your_song_name">Type your song name</string>
    <string name="music">Music</string>
    <string name="kickstart_your_day_with_music">Kickstart your day with music</string>
    <string name="welcome_username">Welcome Username</string>
    <string name="more_gt"><![CDATA[More >]]></string>
    <string name="less_gt"><![CDATA[Less >]]></string>
    <string name="recommended_tunes">Recommended Tunes</string>
    <string name="currently_popular">Currently popular</string>
    <string name="trace_your_beloved_singers">Trace your beloved singers</string>
    <string name="find_out">Find out</string>
    <string name="mixed_for_you">Mixed for you</string>
    <string name="new_artist">New Artist</string>
    <string name="recent_albums_published">Recent albums published</string>
    <string name="weekly_special_music">Weekly Special Music</string>
    <string name="weekly_genres">Weekly genres</string>
    <string name="trending_playlist">Trending playlist</string>
    <string name="trace_your_beloved_singer">Trace your beloved singers</string>
    <string name="special_music">Special Music</string>
    <string name="new_releases">New Releases</string>
    <string name="trace_your_beloved">Trace your beloved singers</string>
    <string name="episodes">Episodes</string>
    <string name="trace">Trace your beloved singers</string>
    <string name="podcast">Podcast</string>
    <string name="click_any_song_to_play">Click any song to play !</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="playlist">Playlist</string>
    <string name="favorites">Favorites</string>
    <string name="_00_00">00:00</string>
    <string name="song_title">Song title</string>
    <string name="description">Description</string>
    <string name="lyrics">Lyrics</string>
    <string name="artist_name">Artist Name</string>
    <string name="line">|</string>
    <string name="_00_01">00:00</string>
    <string name="add_the_name_of_you_new_playlist">Add the name of you new playlist.</string>
    <string name="create_amp_add"><![CDATA[Create & add]]></string>
    <string name="theme_change">Theme Change</string>
    <string name="account_settings">Account Settings</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="username">username</string>
    <string name="settings">Settings</string>
    <string name="song_added_to_favorites">Song added to favorites</string>
    <string name="favorite">Favorites</string>
    <string name="my_songs">My Songs</string>
    <string name="songs">Songs •</string>
    <string name="search_your_favourite_song">Search your favourite song</string>
    <string name="type_song_name">Type song name</string>
    <string name="trending_song">Trending Song</string>
    <string name="new_songs">New Songs</string>
    <string name="mixed">Mixed</string>
    <string name="artist">Artist</string>
    <string name="song">Songs</string>
    <string name="lyric">Lyrics</string>
    <string name="malayalam">മലയാളം</string>
    <string name="english">English</string>
    <string name="song_removed_from_favorites">Song removed from favorites</string>
    <string name="what_do_you_want_to_call_your_new_playlist">What do you want to call your new playlist?</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="no_playlist_yet">No playlist yet.</string>
    <string name="search_your_favourite_artist">Search your favourite artist</string>
    <string name="type_artist_name">Type artist name</string>
    <string name="title">Title</string>
    <string name="you_can_contact_us_on">Contact us on</string>
    <string name="website">VM Website</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="cancel">CANCEL</string>
    <string name="title1">Title</string>
    <string name="textview">TextView</string>
    <string name="time">time</string>
    <string name="vachanam_music">Vachanam Music</string>
    <string name="app_designed_by">App designed by</string>
    <string name="say_hello">Say Hello !</string>
    <string name="_0">0</string>
    <string name="select_your_language">Select your Language</string>
    <string name="hindi">हिंदी</string>
    <string name="tamil">தமிழ்</string>
    <string name="telegue">తెలుగు</string>
    <string name="gujarathi">ગુજરાતી</string>
    <string name="daily_voice">DAILY VOICE</string>
    <string name="messages">MESSAGES</string>
    <string name="old_songs">OLD SONGS</string>
    <string name="new_song">NEW SONGS</string>
    <string name="wedding">Wedding</string>
    <string name="morning">Morning</string>
    <string name="jesus_returns">Jesus Returns</string>
    <string name="worship">Worship</string>
    <string name="hope">Hope</string>
    <string name="my_feed">My Feed</string>
    <string name="so">Songs •</string>
    <string name="my_playlists">My Playlists</string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="help_amp_support"><![CDATA[Help&Support]]></string>
    <string name="feedback">Feedback</string>
    <string name="app_info">App Info</string>
    <string name="profile">Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">Save</string>
    <string name="setting">Settings</string>
    <string name="song_request">Song request</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="logout">Logout</string>
    <string name="confirm_your_deletion">Confirm your deletion</string>
    <string name="do_you_want_to_delete_this_song_from_the_playlist">Would you like to permanently delete this song or playlist ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="playlist_name_change">Playlist name change</string>
    <string name="change_your_playlist_name_here">Change your playlist name here</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="language">Language</string>
    <string name="follow">Follow</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="equalizer">Equalizer</string>
    <string name="share_song">Share</string>
    <string name="song_lyrics">Lyrics</string>
    <string name="song_video">Video</string>
    <string name="song_details">Details</string>
    <string name="copy_lyrics">Copy lyrics</string>


</resources>
