<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<HorizontalScrollView
		android:id="@+id/hscroll2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:padding="8dp"
			android:orientation="horizontal">
			<com.google.android.material.circularreveal.CircularRevealLinearLayout
				android:id="@+id/linear12"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="5dp"
				android:padding="8dp"
				android:background="#E91E63"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal|center_vertical">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/textview5"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:text="@string/wedding"
					android:textSize="14sp"
					android:textColor="#FFFFFF" />
			</com.google.android.material.circularreveal.CircularRevealLinearLayout>
			<com.google.android.material.circularreveal.CircularRevealLinearLayout
				android:id="@+id/linear9"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:padding="8dp"
				android:background="#F50057"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal|center_vertical">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/textview10"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:text="@string/morning"
					android:textSize="14sp"
					android:textColor="#FFFFFF" />
			</com.google.android.material.circularreveal.CircularRevealLinearLayout>
			<com.google.android.material.circularreveal.CircularRevealLinearLayout
				android:id="@+id/linear11"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:padding="8dp"
				android:background="#F50057"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal|center_vertical">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/textview12"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:text="@string/jesus_returns"
					android:textSize="14sp"
					android:textColor="#FFFFFF" />
			</com.google.android.material.circularreveal.CircularRevealLinearLayout>
			<com.google.android.material.circularreveal.CircularRevealLinearLayout
				android:id="@+id/linear57"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:paddingStart="5dp"
				android:paddingTop="8dp"
				android:paddingEnd="8dp"
				android:paddingBottom="8dp"
				android:background="#F50057"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal|center_vertical">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/textview9"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:text="@string/worship"
					android:textSize="14sp"
					android:textColor="#FFFFFF" />
			</com.google.android.material.circularreveal.CircularRevealLinearLayout>
			<com.google.android.material.circularreveal.CircularRevealLinearLayout
				android:id="@+id/linear10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:padding="8dp"
				android:background="#F50057"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal|center_vertical">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/textview11"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:text="@string/hope"
					android:textSize="14sp"
					android:textColor="#FFFFFF" />
			</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
	</HorizontalScrollView>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>
