<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<com.google.android.material.circularreveal.CircularRevealLinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:padding="5dp"
		android:gravity="left|center_vertical"
		android:orientation="horizontal"
		android:layout_gravity="left|center_vertical">
		<androidx.cardview.widget.CardView
			android:id="@+id/cardview1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="vertical"
			app:cardElevation="2dp"
			app:cardCornerRadius="3dp">
			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/imageview2"
				android:focusable="false"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:layout_margin="3dp"
				android:src="@drawable/default_image"
				android:scaleType="fitXY"
				android:layout_gravity="right" />
		</androidx.cardview.widget.CardView>
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="8dp"
			android:paddingTop="8dp"
			android:paddingRight="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="vertical">
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/textview1"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:text="@string/title1"
				android:textSize="16sp"
				android:textStyle="bold"
				android:textColor="#FFFFFF" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/textview2"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingTop="4dp"
				android:paddingRight="8dp"
				android:paddingBottom="8dp"
				android:text="@string/textview"
				android:textSize="12sp"
				android:textColor="#FFFFFF" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/time"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="2dp"
				android:paddingBottom="6dp"
				android:gravity="left"
				android:text="@string/time"
				android:textSize="10sp"
				android:textColor="#BDBDBD"
				android:layout_gravity="right" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
	</com.google.android.material.circularreveal.CircularRevealLinearLayout>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>
