<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<com.google.android.material.circularreveal.CircularRevealLinearLayout
		android:id="@+id/linear6"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="45dp"
		android:padding="8dp"
		android:orientation="horizontal">
		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/textview4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			android:paddingBottom="8dp"
			android:text="@string/search_your_favourite_song"
			android:textSize="18sp"
			android:textStyle="bold"
			android:textColor="#FFFFFF"
			android:layout_gravity="center_horizontal|center_vertical"
			android:layout_weight="1" />
	</com.google.android.material.circularreveal.CircularRevealLinearLayout>
	<com.google.android.material.circularreveal.CircularRevealLinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:padding="8dp"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal|center_vertical">
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edittext1"
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:layout_marginStart="8dp"
			android:background="@android:color/transparent"
			android:gravity="left|center_vertical"
			android:textSize="14sp"
			android:textColor="#FFFFFF"
			android:hint="@string/type_song_name"
			android:textColorHint="#BDBDBD"
			android:singleLine="true"
			android:imeOptions="actionSearch"
			android:layout_weight="1" />
		<com.google.android.material.imageview.ShapeableImageView
			android:id="@+id/imageview1"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:src="@drawable/search"
			android:scaleType="fitXY" />
		<com.google.android.material.imageview.ShapeableImageView
			android:id="@+id/imageview3"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:src="@drawable/close_white"
			android:scaleType="fitXY" />
	</com.google.android.material.circularreveal.CircularRevealLinearLayout>
	<com.google.android.material.circularreveal.CircularRevealLinearLayout
		android:id="@+id/linear123"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:orientation="horizontal">
		<HorizontalScrollView
			android:id="@+id/hscroll1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<com.google.android.material.circularreveal.CircularRevealLinearLayout
				android:id="@+id/linear7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="horizontal">
				<com.google.android.material.circularreveal.CircularRevealLinearLayout
					android:id="@+id/linear126"
					android:layout_width="100dp"
					android:layout_height="30dp"
					android:background="#F50057"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal|center_vertical">
					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/textview15"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:gravity="center_horizontal|center_vertical"
						android:text="@string/trending_song"
						android:textSize="12sp"
						android:textColor="#FFFFFF"
						android:layout_gravity="center_horizontal|center_vertical"
						android:layout_weight="1" />
				</com.google.android.material.circularreveal.CircularRevealLinearLayout>
				<com.google.android.material.circularreveal.CircularRevealLinearLayout
					android:id="@+id/linear9"
					android:layout_width="90dp"
					android:layout_height="30dp"
					android:layout_marginStart="17dp"
					android:background="#F50057"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal|center_vertical">
					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/textview16"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:text="@string/new_songs"
						android:textSize="12sp"
						android:textColor="#FFFFFF" />
				</com.google.android.material.circularreveal.CircularRevealLinearLayout>
				<com.google.android.material.circularreveal.CircularRevealLinearLayout
					android:id="@+id/linear12"
					android:layout_width="115dp"
					android:layout_height="30dp"
					android:layout_marginStart="17dp"
					android:background="#E91E63"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal|center_vertical">
					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/textview5"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:text="Weekly Specials"
						android:textSize="12sp"
						android:textColor="#FFFFFF" />
				</com.google.android.material.circularreveal.CircularRevealLinearLayout>
				<com.google.android.material.circularreveal.CircularRevealLinearLayout
					android:id="@+id/linear11"
					android:layout_width="90dp"
					android:layout_height="30dp"
					android:layout_marginStart="17dp"
					android:background="#F50057"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal|center_vertical">
					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/textview12"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:text="@string/mixed"
						android:textSize="12sp"
						android:textColor="#FFFFFF" />
				</com.google.android.material.circularreveal.CircularRevealLinearLayout>
				<com.google.android.material.circularreveal.CircularRevealLinearLayout
					android:id="@+id/linear124"
					android:layout_width="80dp"
					android:layout_height="30dp"
					android:layout_marginStart="17dp"
					android:background="#F50057"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal|center_vertical">
					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/textview10"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/artist"
						android:textSize="12sp"
						android:textColor="#FFFFFF" />
				</com.google.android.material.circularreveal.CircularRevealLinearLayout>
				<com.google.android.material.circularreveal.CircularRevealLinearLayout
					android:id="@+id/linear57"
					android:layout_width="80dp"
					android:layout_height="30dp"
					android:layout_marginStart="17dp"
					android:background="#F50057"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal|center_vertical">
					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/textview9"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:text="@string/song"
						android:textSize="12sp"
						android:textColor="#FFFFFF" />
				</com.google.android.material.circularreveal.CircularRevealLinearLayout>
			</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		</HorizontalScrollView>
	</com.google.android.material.circularreveal.CircularRevealLinearLayout>
	<com.google.android.material.circularreveal.CircularRevealLinearLayout
		android:id="@+id/linear3"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="8dp"
		android:orientation="vertical">
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/narrowline2"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="#212121"
			android:orientation="horizontal" />
		<ListView
			android:id="@+id/listview1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="150dp"
			android:paddingTop="8dp"
			android:paddingBottom="8dp"
			android:dividerHeight="0dp"
			android:divider="@null"
			android:choiceMode="none" />
	</com.google.android.material.circularreveal.CircularRevealLinearLayout>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>
