<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<com.google.android.material.circularreveal.CircularRevealLinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="15dp"
		android:background="#FFFFFF"
		android:orientation="vertical">
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginRight="8dp"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/textview1"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/what_do_you_want_to_call_your_new_playlist"
				android:textSize="16sp"
				android:textColor="#000000" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear3"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#000000"
			android:orientation="horizontal"
			android:alpha="0.5" />
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="vertical">
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/textview3"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/add_the_name_of_you_new_playlist"
				android:textSize="12sp"
				android:textColor="#000000"
				android:alpha="0.5" />
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/editText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="18sp"
				android:textColor="#000000"
				android:textColorHint="#607D8B"
				android:focusable="true" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/createBtn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:background="#F50057"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/textview2"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/create_amp_add"
				android:textSize="16sp"
				android:textColor="#FFFFFF" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
	</com.google.android.material.circularreveal.CircularRevealLinearLayout>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>
