<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<com.google.android.material.circularreveal.CircularRevealLinearLayout
		android:id="@+id/bg"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:padding="8dp"
		android:background="#FFFFFF"
		android:orientation="vertical">
		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/textview4"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/you_can_contact_us_on"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="#616161"
			android:layout_gravity="center_horizontal|center_vertical" />
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear18"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/imageview14"
				android:focusable="false"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:padding="8dp"
				android:src="@drawable/app_logo"
				android:scaleType="centerInside" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/t1"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/website"
				android:textSize="16sp"
				android:textStyle="bold"
				android:textColor="#616161"
				android:layout_gravity="center_horizontal|center_vertical" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear6"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/imageview6"
				android:focusable="false"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:padding="8dp"
				android:src="@drawable/whatsapp_image"
				android:scaleType="centerInside" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/t2"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/whatsapp"
				android:textSize="16sp"
				android:textStyle="bold"
				android:textColor="#616161"
				android:layout_gravity="center_horizontal|center_vertical" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear8"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/imageview7"
				android:focusable="false"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:padding="8dp"
				android:src="@drawable/facebook_image"
				android:scaleType="centerInside" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/t3"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="Facebook"
				android:textSize="16sp"
				android:textStyle="bold"
				android:textColor="#616161"
				android:layout_gravity="center_horizontal|center_vertical" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear9"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/imageview8"
				android:focusable="false"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:padding="8dp"
				android:src="@drawable/instagram_image"
				android:scaleType="centerInside" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/t4"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/instagram"
				android:textSize="16sp"
				android:textStyle="bold"
				android:textColor="#616161"
				android:layout_gravity="center_horizontal|center_vertical" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
		<com.google.android.material.circularreveal.CircularRevealLinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="13dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/b2"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:padding="8dp"
				android:background="#3D5AFE"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/cancel"
				android:textSize="14sp"
				android:textColor="#FFFFFF"
				android:layout_weight="1" />
		</com.google.android.material.circularreveal.CircularRevealLinearLayout>
	</com.google.android.material.circularreveal.CircularRevealLinearLayout>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>
